formatting, small tweaks