@@ -2,7 +2,6 @@
  * Copyright evilmidget38. Obtained from: https://gist.github.com/evilmidget38/a5c971d2f2b2c3b3fb37
  * I (Hidendra) have made minor changes (mainly removing unused code)
  */
-
 package com.griefcraft.util;
 
 import com.google.common.collect.ImmutableList;
@@ -11,7 +10,7 @@ import org.json.simple.parser.JSONParser;
 
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -19,6 +18,7 @@ import java.util.UUID;
 import java.util.concurrent.Callable;
 
 public class NameFetcher implements Callable<Map<UUID, String>> {
+
     private static final String PROFILE_URL = "https://sessionserver.mojang.com/session/minecraft/profile/";
     private final JSONParser jsonParser = new JSONParser();
     private final List<UUID> uuids;
@@ -27,10 +27,11 @@ public class NameFetcher implements Callable<Map<UUID, String>> {
         this.uuids = ImmutableList.copyOf(uuids);
     }
 
+    @Override
     public Map<UUID, String> call() throws Exception {
-        Map<UUID, String> uuidStringMap = new HashMap<UUID, String>();
+        Map<UUID, String> uuidStringMap = new HashMap();
         for (UUID uuid : uuids) {
-            HttpURLConnection connection = (HttpURLConnection) new URL(PROFILE_URL + uuid.toString().replace("-", "")).openConnection();
+            HttpURLConnection connection = (HttpURLConnection) URI.create(PROFILE_URL + uuid.toString().replace("-", "")).toURL().openConnection();
             JSONObject response = (JSONObject) jsonParser.parse(new InputStreamReader(connection.getInputStream()));
             String name = (String) response.get("name");
             if (name == null) {
